# TerminalGame

./: CMakeLists.txt  README.md
.cache/clangd/index/: components.cpp.71ED088E4A330851.idx  components.h.FDF630671ABC86B1.idx  game.cpp.34BD649A489B01EA.idx  main.cpp.710AC56734B66182.idx  screens.cpp.358B3743BEEDEE27.idx  screens.h.F757CC98AE4ACF0C.idx  window.cpp.554337ADF4CD5623.idx  window.h.A9DCE91C0DA4CFC8.idx
includes/: components.h  screens.h  window.h
src/: components.cpp  main.cpp  screens.cpp  window.cpp
